--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@
 
 
 #homepage{
-    background-image: url(studio.jpg);
+    background-image: url(img/background/studio.jpg);
     background-size: cover;
 	background-position: center;
  	background-repeat: no-repeat, repeat; 
@@ -142,8 +142,8 @@
 
 @media (max-width:800px){
     #logo_hp{
-        width: 220px;
-        height: 130px;
+        width: 200px;
+        height: 110px;
     }
     
     #text_hp{
@@ -174,6 +174,8 @@
     align-content: center;
     width: auto;
     height: auto;
+    overflow-y: hidden;
+    margin-bottom: 64px;
 }
 
 .box{
@@ -200,8 +202,8 @@
 .say_all_portfolio{
     display: grid;
     place-content: center;
-    font-size: 28px;
-    padding: 58px;
+    font-size: 32px;
+    padding: 100px;
 }
 
 .say_all_portfolio a{
@@ -239,7 +241,7 @@
 
 
 #pop_oferty{
-    background-image: url(camera.jpg);
+    background-image: url(img/background/camera.jpg);
     background-size: cover;
 	background-position: center;
  	background-repeat: no-repeat, repeat; 
@@ -433,18 +435,20 @@
         overflow-y: hidden;
     }
     
+    #min_pop_table{
+        height: 180px;
+    }
+    
     #image{
         position: relative;
-        width: 150px;
-        max-height: 200px;
+        width: 120px;
+        max-height: 180px;
         margin: 0;
         padding: 0;
         border: 0;
     }
     
     #image__img{
-        height: 10vh;
-        width: 200px;
         display: none;
     }
     
@@ -455,7 +459,7 @@
     #image__img2{
         display: block;
         width: 100%;
-        height: 245px;
+        height: 180px;
         z-index: 1;
         margin: 0;
         padding: 0;
@@ -498,7 +502,7 @@
     .zdj_mobile1{
         display: block;
         width: 100%;
-        height: 118px;
+        height: 90px;
         z-index: 1;
         margin: 0;
         padding: 0;
@@ -522,7 +526,7 @@
     }
     
     .img_overlay2{
-        height: 120px;
+        height: 100%;
     }
     
     .img_overlay2:hover{
@@ -536,15 +540,15 @@
     
     #zdjecie_pierwsze_prawo{
         position: relative;
-        width: 200px;
-        height: 120px;
+        width: 110px;
+        height: 50%;
     }
     
     
     #zdjecie_drugie_prawo{
         position: relative;
-        width: 200px;
-        height: 120px;
+        width: 110px;
+        height: 50%;
         overflow-y: hidden;
     }
     
@@ -583,7 +587,7 @@
 }
 
 #o_mnie{
-    background-image: url(lukasiakaparat.jpg);
+    background-image: url(img/background/lukasiakaparat.jpg);
     background-size: cover;
 	background-position: center;
  	background-repeat: no-repeat, repeat; 
